modified:   README.md 	new file:   gen_test.py 	new file:   gen_train.py 	modified:   make_submission.py 	modified:   network.conf 	modified:   requirements-gpu.pip 	modified:   requirements.pip

--- a/network.conf
+++ b/network.conf
@@ -2,8 +2,8 @@ netconfig = start
 layer[0->1] = conv
   init_random = gaussian
   padding = 2
-  stride = 4
-  num_channels = 96
+  stride = 2
+  num_channels = 32
   num_groups = 1
   kernel_size = 5
 layer[1->2] = relu
@@ -21,39 +21,47 @@ layer[3->4] = conv
 layer[4->5] = relu
 layer[5->6] = conv
   init_random = gaussian
-  padding = 1
+  padding = 2
   stride = 1
-  num_channels = 128
+  num_channels = 192
   num_groups = 1
   kernel_size = 3
 layer[6->7] = relu
-layer[7->8] = max_pooling
+layer[7->8] = conv
+  init_random = gaussian
+  padding = 1
+  stride = 1
+  num_channels = 256
+  num_groups = 1
+  kernel_size = 3
+layer[8->9] = relu
+layer[9->10] = max_pooling
   padding = 0
   stride = 2
   kernel_size = 3
-layer[8->9] = flatten
-layer[9->10] = fullc
+layer[10->11] = flatten
+layer[11->12] = fullc
   init_sigma = 0.01
   init_random = gaussian
   init_bias = 0
   num_hidden_units = 512
-layer[10->11] = relu
-layer[11->12] = dropout
+layer[12->13] = relu
+layer[13->14] = dropout
   threshold = 0.5
-layer[12->13] = fullc
+layer[14->15] = fullc
   init_sigma = 0.01
   init_random = gaussian
   init_bias = 0
   num_hidden_units = 512
-layer[13->14] = relu
-layer[14->15] = dropout
+layer[15->16] = relu
+layer[16->17] = dropout
   threshold = 0.5
-layer[15->16] = fullc
+layer[17->18] = fullc
   init_sigma = 0.01
   init_random = gaussian
   init_bias = 0
   num_hidden_units = 121
-layer[16->17] = softmax
+layer[18->19] = softmax
 netconfig = end
 
 ## network parameters
